@@ -14607,3 +14607,74 @@ AT_CHECK([grep -w "lr_in_ip_routing" lr0flows | ovn_strip_lflows], [0], [dnl
 AT_CLEANUP
 ])
 
+OVN_FOR_EACH_NORTHD_NO_HV([
+AT_SETUP([dynamic-routing - host routes])
+AT_KEYWORDS([dynamic-routing])
+ovn_start
+
+# we start with announcing routes on a lr with 2 lrps
+# lr0-sw0 is connected to ls sw0
+check ovn-nbctl lr-add lr0
+check ovn-nbctl set Logical_Router lr0 option:dynamic-routing=true \
+                                 option:dynamic-routing-connected=true \
+                                 option:dynamic-routing-static=true
+check ovn-nbctl lrp-add lr0 lr0-sw0 00:00:00:00:ff:01 10.0.0.1/24
+sw0=$(ovn-sbctl --bare --columns _uuid list port_binding lr0-sw0)
+check ovn-nbctl lrp-add lr0 lr0-sw1 00:00:00:00:ff:02 10.0.1.1/24
+sw1=$(ovn-sbctl --bare --columns _uuid list port_binding lr0-sw1)
+check ovn-nbctl ls-add sw0
+check ovn-nbctl lsp-add sw0 sw0-lr0
+check ovn-nbctl --wait=sb set Logical_Switch_Port sw0-lr0 type=router options:router-port=lr0-sw0
+check_row_count Advertised_Route 2 tracked_port='[[]]'
+datapath=$(ovn-sbctl --bare --columns _uuid list datapath_binding lr0)
+
+# configuring the LRP lr0-sw0 to send host routes
+# as sw0 is quite empty we will only see the addresses of lr0-sw0
+check ovn-nbctl --wait=sb set Logical_Router_Port lr0-sw0 options:dynamic-routing-connected-as-host-routes=true
+check_row_count Advertised_Route 2
+AT_CHECK_UNQUOTED([ovn-sbctl --columns ip_prefix,tracked_port --bare find Advertised_Route datapath=$datapath logical_port=$sw0], [0], [dnl
+10.0.0.1/32
+$sw0
+])
+
+# adding a VIF to the LS sw0 will advertise it as well
+check ovn-nbctl lsp-add sw0 sw0-vif0
+check ovn-nbctl --wait=sb lsp-set-addresses sw0-vif0 "00:aa:bb:cc:dd:ee 10.0.0.2"
+vif0=$(ovn-sbctl --bare --columns _uuid list port_binding sw0-vif0)
+check_row_count Advertised_Route 3
+check_row_count Advertised_Route 2 tracked_port!='[[]]'
+AT_CHECK_UNQUOTED([ovn-sbctl --columns tracked_port --bare find Advertised_Route datapath=$datapath logical_port=$sw0 ip_prefix=10.0.0.2/32], [0], [dnl
+$vif0
+])
+
+# adding a LR lr1 to the LS sw0 will advertise the LRP of the new router
+check ovn-nbctl lr-add lr1
+check ovn-nbctl lrp-add lr1 lr1-sw0 00:00:00:01:ff:01 10.0.0.10/24
+check ovn-nbctl lsp-add sw0 sw0-lr1
+lr1=$(ovn-sbctl --bare --columns _uuid list port_binding lr1-sw0)
+check ovn-nbctl --wait=sb set Logical_Switch_Port sw0-lr1 type=router options:router-port=lr1-sw0
+check_row_count Advertised_Route 4
+check_row_count Advertised_Route 3 tracked_port!='[[]]'
+AT_CHECK_UNQUOTED([ovn-sbctl --columns tracked_port --bare find Advertised_Route datapath=$datapath logical_port=$sw0 ip_prefix=10.0.0.10/32], [0], [dnl
+$lr1
+])
+
+# adding a NAT rule to lr1 will advertise it as well
+check ovn-nbctl --wait=sb lr-nat-add lr1 dnat_and_snat 10.0.0.100 192.168.0.1
+check_row_count Advertised_Route 5
+check_row_count Advertised_Route 4 tracked_port!='[[]]'
+AT_CHECK_UNQUOTED([ovn-sbctl --columns tracked_port --bare find Advertised_Route datapath=$datapath logical_port=$sw0 ip_prefix=10.0.0.100/32], [0], [dnl
+$lr1
+])
+
+# adding a static route to lr1 will be advertised just normally
+check ovn-nbctl --wait=sb lr-route-add lr0 172.16.0.0/24 10.0.0.200
+check_row_count Advertised_Route 6
+check_row_count Advertised_Route 4 tracked_port!='[[]]'
+AT_CHECK([ovn-sbctl --columns ip_prefix --bare find Advertised_Route datapath=$datapath logical_port=$sw0 ip_prefix=172.16.0.0/24], [0], [dnl
+172.16.0.0/24
+])
+
+AT_CLEANUP
+])
+
