@@ -22,6 +22,8 @@ Post v24.09.0
      Routes entered into the "Route" table in the southbound database will be
      learned by the respective LR. They are included in the route table with
      a lower priority than static routes.
+   - Add the option "dynamic-routing-connected-as-host-routes" to LRPs. If set
+     to true then connected routes are announced as individual host routes.
 
 OVN v24.09.0 - 13 Sep 2024
 --------------------------
